src/test/resources/purescript_examples/passing/ImportHiding.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Debug')
            PsiElement(.)('.')
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Trace')
        PsiElement(whitespace)('\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)(' ')
        PsiElement(hiding)('hiding')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(PositionedDeclarationRef)
          PureASTWrapperElement(ValueRef)
            PsiElement(identifier)('show')
        PsiElement(,)(',')
        PsiElement(whitespace)(' -- a value\n  ')
        PureASTWrapperElement(PositionedDeclarationRef)
          PsiElement(proper name)('Show')
        PsiElement(,)(',')
        PsiElement(whitespace)(' -- a type class\n  ')
        PureASTWrapperElement(PositionedDeclarationRef)
          PsiElement(proper name)('Unit')
          PsiElement(()('(')
          PsiElement(..)('..')
          PsiElement())(')')
          PsiElement(whitespace)('  -- a constructor\n  ')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('show')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(NumericLiteral)
              PsiElement(natural)('1')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Show')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(TypeDeclaration)
          PsiElement(identifier)('noshow')
          PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PureASTWrapperElement(TypeVar)
                  PsiElement(identifier)('a')
                  PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Unit')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('X')
        PsiElement(whitespace)(' ')
        PsiElement(|)('|')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Y')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PureASTWrapperElement(DoNotationValue)
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('print')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('show')
                      PsiElement(whitespace)('\n')
